--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,20 @@
 FROM node:20-alpine AS builder
 
 WORKDIR /app
-COPY . .
-
+COPY package*.json ./
 RUN npm install
+
+COPY . .
 RUN npm run build
 
 # Use nginx to serve static files
 FROM nginx:alpine
 
+# Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy nginx configuration (fixed version without proxy)
+COPY nginx-fixed.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
