--- a/kubernetes/kro/game2048-app-rgd.yaml
+++ b/kubernetes/kro/game2048-app-rgd.yaml
@@ -9,189 +9,95 @@ spec:
     kind: Game2048Application
     spec:
       # Application configuration
-      name:
-        type: string
-        description: "Name of the application"
-        default: "game2048"
+      name: string | default="game2048"
+      namespace: string | default="game-2048"
 
-      namespace:
-        type: string
-        description: "Kubernetes namespace for the application"
-        default: "game-2048"
+      # Backend configuration
+      backendImage: string | default="emnalmdr/2048-backend:latest"
+      backendReplicas: integer | default=2
+      backendPort: integer | default=8000
 
-      # Image configuration
-      backend:
-        type: object
-        description: "Backend service configuration"
-        default:
-          image: "2048-backend:latest"
-          replicas: 2
-          port: 8000
-        properties:
-          image:
-            type: string
-            default: "2048-backend:latest"
-          replicas:
-            type: integer
-            default: 2
-          port:
-            type: integer
-            default: 8000
+      # Frontend configuration
+      frontendImage: string | default="emnalmdr/2048-frontend:v2"
+      frontendReplicas: integer | default=2
+      frontendPort: integer | default=80
 
-      frontend:
-        type: object
-        description: "Frontend service configuration"
-        default:
-          image: "2048-frontend:latest"
-          replicas: 2
-          port: 80
-        properties:
-          image:
-            type: string
-            default: "2048-frontend:latest"
-          replicas:
-            type: integer
-            default: 2
-          port:
-            type: integer
-            default: 80
-
-      # AWS resources
-      dynamodb:
-        type: object
-        description: "DynamoDB configuration"
-        default:
-          tableName: "game2048-leaderboard"
-          region: "eu-west-1"
-        properties:
-          tableName:
-            type: string
-            default: "game2048-leaderboard"
-          region:
-            type: string
-            default: "eu-west-1"
-
-      s3:
-        type: object
-        description: "S3 backup configuration"
-        default:
-          bucketName: ""
-          region: "eu-west-1"
-          enabled: false
-        properties:
-          bucketName:
-            type: string
-            description: "S3 bucket name (leave empty to disable)"
-          region:
-            type: string
-            default: "eu-west-1"
-          enabled:
-            type: boolean
-            default: false
+      # DynamoDB configuration
+      tableName: string | default="game2048-leaderboard"
+      region: string | default="eu-west-1"
 
       # Ingress configuration
-      ingress:
-        type: object
-        description: "Ingress configuration"
-        default:
-          enabled: true
-          hostname: "2048.local"
-          ingressClass: "nginx"
-        properties:
-          enabled:
-            type: boolean
-            default: true
-          hostname:
-            type: string
-            default: "2048.local"
-          ingressClass:
-            type: string
-            default: "nginx"
-
-    status:
-      phase:
-        type: string
-        description: "Current phase of the application"
-
-      backendReady:
-        type: boolean
-        description: "Backend deployment readiness"
-
-      frontendReady:
-        type: boolean
-        description: "Frontend deployment readiness"
-
-      ingressReady:
-        type: boolean
-        description: "Ingress readiness"
+      hostname: string | default="2048.local"
+      ingressClass: string | default="alb"
 
   resources:
     # Namespace
-    - id: namespace
+    - id: appNamespace
       template:
         apiVersion: v1
         kind: Namespace
         metadata:
-          name: "{{ .spec.namespace }}"
+          name: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}"
+            app.kubernetes.io/name: ${schema.spec.name}
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
 
-    # ConfigMap for application configuration
-    - id: app-config
+    # Backend Service Account
+    - id: backendServiceAccount
       template:
         apiVersion: v1
-        kind: ConfigMap
+        kind: ServiceAccount
         metadata:
-          name: "{{ .spec.name }}-config"
-          namespace: "{{ .spec.namespace }}"
+          name: ${schema.spec.name}-backend
+          namespace: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}"
+            app.kubernetes.io/name: ${schema.spec.name}-backend
+            app.kubernetes.io/component: backend
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
-        data:
-          PORT: "{{ .spec.backend.port }}"
-          DYNAMODB_TABLE: "{{ .spec.dynamodb.tableName }}"
-          AWS_REGION: "{{ .spec.dynamodb.region }}"
-          VITE_API: "http://{{ .spec.name }}-backend-service:{{ .spec.backend.port }}"
+          annotations:
+            eks.amazonaws.com/role-arn: arn:aws:iam::247747705325:role/game2048-backend-role
 
     # Backend Deployment
-    - id: backend-deployment
+    - id: backendDeployment
       template:
         apiVersion: apps/v1
         kind: Deployment
         metadata:
-          name: "{{ .spec.name }}-backend"
-          namespace: "{{ .spec.namespace }}"
+          name: ${schema.spec.name}-backend
+          namespace: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}-backend"
+            app.kubernetes.io/name: ${schema.spec.name}-backend
             app.kubernetes.io/component: backend
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
         spec:
-          replicas: "{{ .spec.backend.replicas }}"
+          replicas: ${schema.spec.backendReplicas}
           selector:
             matchLabels:
-              app.kubernetes.io/name: "{{ .spec.name }}-backend"
+              app.kubernetes.io/name: ${schema.spec.name}-backend
               app.kubernetes.io/component: backend
           template:
             metadata:
               labels:
-                app.kubernetes.io/name: "{{ .spec.name }}-backend"
+                app.kubernetes.io/name: ${schema.spec.name}-backend
                 app.kubernetes.io/component: backend
             spec:
-              serviceAccountName: "{{ .spec.dynamodb.tableName }}-sa"
+              serviceAccountName: ${schema.spec.name}-backend
               containers:
                 - name: backend
-                  image: "{{ .spec.backend.image }}"
+                  image: ${schema.spec.backendImage}
                   imagePullPolicy: IfNotPresent
                   ports:
-                    - containerPort: "{{ .spec.backend.port }}"
+                    - containerPort: ${schema.spec.backendPort}
                       name: http
-                  envFrom:
-                    - configMapRef:
-                        name: "{{ .spec.name }}-config"
+                  env:
+                    - name: PORT
+                      value: "8000"
+                    - name: AWS_REGION
+                      value: ${schema.spec.region}
+                    - name: DYNAMODB_TABLE
+                      value: ${schema.spec.tableName}
+                    - name: GAME_SESSIONS_TABLE
+                      value: "game2048-sessions-dev"
                   resources:
                     requests:
                       memory: "64Mi"
@@ -202,80 +108,72 @@ spec:
                   livenessProbe:
                     httpGet:
                       path: /health
-                      port: "{{ .spec.backend.port }}"
+                      port: ${schema.spec.backendPort}
                     initialDelaySeconds: 10
                     periodSeconds: 30
-                    timeoutSeconds: 5
-                    failureThreshold: 3
                   readinessProbe:
                     httpGet:
                       path: /health
-                      port: "{{ .spec.backend.port }}"
+                      port: ${schema.spec.backendPort}
                     initialDelaySeconds: 5
                     periodSeconds: 10
-                    timeoutSeconds: 3
-                    failureThreshold: 2
-              restartPolicy: Always
 
     # Backend Service
-    - id: backend-service
+    - id: backendService
       template:
         apiVersion: v1
         kind: Service
         metadata:
-          name: "{{ .spec.name }}-backend-service"
-          namespace: "{{ .spec.namespace }}"
+          name: ${schema.spec.name}-backend-service
+          namespace: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}-backend-service"
+            app.kubernetes.io/name: ${schema.spec.name}-backend-service
             app.kubernetes.io/component: backend
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
+          annotations:
+            alb.ingress.kubernetes.io/healthcheck-path: /health
         spec:
           type: ClusterIP
           ports:
-            - port: "{{ .spec.backend.port }}"
-              targetPort: "{{ .spec.backend.port }}"
+            - port: ${schema.spec.backendPort}
+              targetPort: ${schema.spec.backendPort}
               protocol: TCP
               name: http
           selector:
-            app.kubernetes.io/name: "{{ .spec.name }}-backend"
+            app.kubernetes.io/name: ${schema.spec.name}-backend
             app.kubernetes.io/component: backend
 
     # Frontend Deployment
-    - id: frontend-deployment
+    - id: frontendDeployment
       template:
         apiVersion: apps/v1
         kind: Deployment
         metadata:
-          name: "{{ .spec.name }}-frontend"
-          namespace: "{{ .spec.namespace }}"
+          name: ${schema.spec.name}-frontend
+          namespace: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}-frontend"
+            app.kubernetes.io/name: ${schema.spec.name}-frontend
             app.kubernetes.io/component: frontend
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
         spec:
-          replicas: "{{ .spec.frontend.replicas }}"
+          replicas: ${schema.spec.frontendReplicas}
           selector:
             matchLabels:
-              app.kubernetes.io/name: "{{ .spec.name }}-frontend"
+              app.kubernetes.io/name: ${schema.spec.name}-frontend
               app.kubernetes.io/component: frontend
           template:
             metadata:
               labels:
-                app.kubernetes.io/name: "{{ .spec.name }}-frontend"
+                app.kubernetes.io/name: ${schema.spec.name}-frontend
                 app.kubernetes.io/component: frontend
             spec:
               containers:
                 - name: frontend
-                  image: "{{ .spec.frontend.image }}"
+                  image: ${schema.spec.frontendImage}
                   imagePullPolicy: IfNotPresent
                   ports:
-                    - containerPort: "{{ .spec.frontend.port }}"
+                    - containerPort: ${schema.spec.frontendPort}
                       name: http
-                  envFrom:
-                    - configMapRef:
-                        name: "{{ .spec.name }}-config"
                   resources:
                     requests:
                       memory: "32Mi"
@@ -286,43 +184,37 @@ spec:
                   livenessProbe:
                     httpGet:
                       path: /
-                      port: "{{ .spec.frontend.port }}"
+                      port: ${schema.spec.frontendPort}
                     initialDelaySeconds: 10
                     periodSeconds: 30
-                    timeoutSeconds: 5
-                    failureThreshold: 3
                   readinessProbe:
                     httpGet:
                       path: /
-                      port: "{{ .spec.frontend.port }}"
+                      port: ${schema.spec.frontendPort}
                     initialDelaySeconds: 5
                     periodSeconds: 10
-                    timeoutSeconds: 3
-                    failureThreshold: 2
-              restartPolicy: Always
 
     # Frontend Service
-    - id: frontend-service
+    - id: frontendService
       template:
         apiVersion: v1
         kind: Service
         metadata:
-          name: "{{ .spec.name }}-frontend-service"
-          namespace: "{{ .spec.namespace }}"
+          name: ${schema.spec.name}-frontend-service
+          namespace: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}-frontend-service"
+            app.kubernetes.io/name: ${schema.spec.name}-frontend-service
             app.kubernetes.io/component: frontend
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
         spec:
           type: ClusterIP
           ports:
-            - port: "{{ .spec.frontend.port }}"
-              targetPort: "{{ .spec.frontend.port }}"
+            - port: ${schema.spec.frontendPort}
+              targetPort: ${schema.spec.frontendPort}
               protocol: TCP
               name: http
           selector:
-            app.kubernetes.io/name: "{{ .spec.name }}-frontend"
+            app.kubernetes.io/name: ${schema.spec.name}-frontend
             app.kubernetes.io/component: frontend
 
     # Ingress
@@ -331,31 +223,48 @@ spec:
         apiVersion: networking.k8s.io/v1
         kind: Ingress
         metadata:
-          name: "{{ .spec.name }}-ingress"
-          namespace: "{{ .spec.namespace }}"
+          name: ${schema.spec.name}-ingress
+          namespace: ${schema.spec.namespace}
           labels:
-            app.kubernetes.io/name: "{{ .spec.name }}-ingress"
+            app.kubernetes.io/name: ${schema.spec.name}-ingress
             app.kubernetes.io/managed-by: kro
-            kro.run/resource-graph: "{{ .metadata.name }}"
           annotations:
-            kubernetes.io/ingress.class: "{{ .spec.ingress.ingressClass }}"
-            nginx.ingress.kubernetes.io/rewrite-target: /
+            alb.ingress.kubernetes.io/scheme: internet-facing
+            alb.ingress.kubernetes.io/target-type: ip
+            alb.ingress.kubernetes.io/healthcheck-path: /health
+            alb.ingress.kubernetes.io/backend-protocol: HTTP
+            alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
+            alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600
         spec:
+          ingressClassName: ${schema.spec.ingressClass}
           rules:
-            - host: "{{ .spec.ingress.hostname }}"
-              http:
+            - http:
                 paths:
+                  - path: /game/
+                    pathType: Prefix
+                    backend:
+                      service:
+                        name: ${schema.spec.name}-backend-service
+                        port:
+                          number: ${schema.spec.backendPort}
+                  - path: /leaderboard/
+                    pathType: Prefix
+                    backend:
+                      service:
+                        name: ${schema.spec.name}-backend-service
+                        port:
+                          number: ${schema.spec.backendPort}
+                  - path: /health
+                    pathType: Exact
+                    backend:
+                      service:
+                        name: ${schema.spec.name}-backend-service
+                        port:
+                          number: ${schema.spec.backendPort}
                   - path: /
                     pathType: Prefix
                     backend:
                       service:
-                        name: "{{ .spec.name }}-frontend-service"
+                        name: ${schema.spec.name}-frontend-service
                         port:
-                          number: "{{ .spec.frontend.port }}"
-                  - path: /api
-                    pathType: Prefix
-                    backend:
-                      service:
-                        name: "{{ .spec.name }}-backend-service"
-                        port:
-                          number: "{{ .spec.backend.port }}"
+                          number: ${schema.spec.frontendPort}
